# nftminting

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20240601181042_users_table.up.sql
backend/settings/: base.yml  dev.yml  prod.yml
backend/src/: lib.rs  main.rs  settings.rs  startup.rs
backend/src/models/: general.rs  mod.rs  users.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/auth/: current_user.rs  google.rs  mod.rs  set_cookie.rs
backend/src/store/: general.rs  mod.rs  users.rs
backend/src/utils/: errors.rs  google_auth.rs  mod.rs  responses.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/components/: Loader.svelte  Nav.svelte
frontend/src/lib/stores/: loading.store.ts
frontend/src/lib/types/: loading.interface.ts
frontend/src/lib/utils/: constants.ts
frontend/src/routes/: +layout.svelte  +layout.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/manage-redirect/: +page.server.ts  +page.svelte
